objects/Bookkeeping__c.object
<CustomObject>
    <fields>
        <fullName>Dec_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Dec Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Due_Date__c</fullName>
        <label>Dec Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan 15th</fullName>
                </value>
                <value>
                    <fullName>Jan 25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dec_Financials_Sent_to_Client_On__c</fullName>
        <label>Dec Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_In_Progress__c</fullName>
        <label>Dec In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Not_Started__c</fullName>
        <label>Dec Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Priority__c</fullName>
        <label>Dec Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dec_Review__c</fullName>
        <label>Dec Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Send_Financials_or_Review_Notes__c</fullName>
        <label>Dec Send Financials or Review Notes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dec_Type_of_Financials_Sent__c</fullName>
        <label>Dec Type of Financials Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Financials_Sent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Docs_Rcvd_from_Client__c</fullName>
        <label>Docs Rcvd from Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <formula>Entity__r.EIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EarliestTimeLogged__c</fullName>
        <inlineHelpText>Date the first time card was logged.</inlineHelpText>
        <label>Earliest Time Logged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Edit_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Month_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Month Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_of_Month__c</fullName>
        <description>Calculates the end of the month for workflows.</description>
        <formula>IF(MONTH(TODAY()) = 1, DATE(YEAR(TODAY()), 1, 31), 
IF(MONTH(TODAY()) = 2, DATE(YEAR(TODAY()), 2, 28), 
IF(MONTH(TODAY()) = 3, DATE(YEAR(TODAY()), 3, 31), 
IF(MONTH(TODAY()) = 4, DATE(YEAR(TODAY()), 4, 30), 
IF(MONTH(TODAY()) = 5, DATE(YEAR(TODAY()), 5, 31), 
IF(MONTH(TODAY()) = 6, DATE(YEAR(TODAY()), 6, 30), 
IF(MONTH(TODAY()) = 7, DATE(YEAR(TODAY()), 7, 31), 
IF(MONTH(TODAY()) = 8, DATE(YEAR(TODAY()), 8, 31), 
IF(MONTH(TODAY()) = 9, DATE(YEAR(TODAY()), 9, 30), 
IF(MONTH(TODAY()) = 10, DATE(YEAR(TODAY()), 10, 31), 
IF(MONTH(TODAY()) = 11, DATE(YEAR(TODAY()), 11, 30), DATE(YEAR(TODAY()), 12, 31))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Next_Month__c</fullName>
        <formula>IF(MONTH(TODAY()) = 1, DATE(YEAR(TODAY()), 2, 28), 
IF(MONTH(TODAY()) = 2, DATE(YEAR(TODAY()), 3, 31), 
IF(MONTH(TODAY()) = 3, DATE(YEAR(TODAY()), 4, 30), 
IF(MONTH(TODAY()) = 4, DATE(YEAR(TODAY()), 5, 31), 
IF(MONTH(TODAY()) = 5, DATE(YEAR(TODAY()), 6, 30), 
IF(MONTH(TODAY()) = 6, DATE(YEAR(TODAY()), 7, 31), 
IF(MONTH(TODAY()) = 7, DATE(YEAR(TODAY()), 8, 31), 
IF(MONTH(TODAY()) = 8, DATE(YEAR(TODAY()), 9, 30), 
IF(MONTH(TODAY()) = 9, DATE(YEAR(TODAY()), 10, 31), 
IF(MONTH(TODAY()) = 10, DATE(YEAR(TODAY()), 11, 30), 
IF(MONTH(TODAY()) = 11, DATE(YEAR(TODAY()), 12, 31), DATE(YEAR(TODAY()) + 1, 1, 31))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Next Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>Entity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Bookkeeping Records</relationshipLabel>
        <relationshipName>Bookkeeping_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Extension_Filed__c</fullName>
        <inlineHelpText>Enter the date the extension was filed!</inlineHelpText>
        <label>Extension Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Bookkeeping_Stages__c</fullName>
        <label>Feb Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feb_Called_Client_On__c</fullName>
        <inlineHelpText>Please call the client at least once a month and record when you did so here.</inlineHelpText>
        <label>Feb Called Client On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Feb_Comments__c</fullName>
        <label>Feb Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feb_Complete__c</fullName>
        <label>Feb Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Days_From_Review_to_Send_Financials__c</fullName>
        <formula>Feb_Send_Financials_or_Review_Notes__c - Feb_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Days From Review to Send Financials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Days_from_Not_Started_to_Complete__c</fullName>
        <formula>Feb_Complete__c - Feb_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Days from Not Started to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Days_to_1st_Review__c</fullName>
        <formula>Feb_Review__c - Feb_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb Days to 1st Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_Docs_Rcvd_From_Client__c</fullName>
        <label>Feb Docs Rcvd From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Feb Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Due_Date__c</fullName>
        <label>Feb Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mar 15th</fullName>
                </value>
                <value>
                    <fullName>Mar 25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feb_Financials_Sent_to_Client_On__c</fullName>
        <label>Feb Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_In_Progress__c</fullName>
        <label>Feb In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Not_Started__c</fullName>
        <label>Feb Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Priority__c</fullName>
        <label>Feb Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feb_Review__c</fullName>
        <label>Feb Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Send_Financials_or_Review_Notes__c</fullName>
        <label>Feb Send Financials or Review Notes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feb_Type_of_Financials_Sent__c</fullName>
        <label>Feb Type of Financials Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Financials_Sent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financials_Sent_to_Client_On__c</fullName>
        <label>Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_End__c</fullName>
        <label>Fiscal Year End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fix_Set_of_Books__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fix Set of Books</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HarvestProjectID__c</fullName>
        <description>Harvest&apos;s Unique ID for the Harvest Project. This value can retrieved from the the URL of Harvest&apos;s Project screen.</description>
        <externalId>true</externalId>
        <inlineHelpText>Harvest&apos;s Unique ID for the Harvest Project. This value can retrieved from the the URL of Harvest&apos;s Project screen.</inlineHelpText>
        <label>Harvest Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Sent_to_ABA_By__c</fullName>
        <formula>IF(INCLUDES( Case__r.Info_Sent_to_ABA_By__c , &quot;Access&quot;), &quot;Access&quot;, NULL)  + BR() + 
IF(INCLUDES( Case__r.Info_Sent_to_ABA_By__c , &quot;Box&quot;), &quot;Box&quot;, NULL)  + BR() + 
IF(INCLUDES( Case__r.Info_Sent_to_ABA_By__c , &quot;Mail&quot;), &quot;Mail&quot;, NULL)  + BR() + 
IF(INCLUDES( Case__r.Info_Sent_to_ABA_By__c , &quot;Other&quot;), &quot;Box&quot;, NULL)  + BR() + 
IF(INCLUDES( Case__r.Info_Sent_to_ABA_By__c , &quot;Email&quot;), &quot;Email&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Info Sent to ABA By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceMethod__c</fullName>
        <label>Invoice Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This project is not billable</fullName>
                </value>
                <value>
                    <fullName>This project is billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoicedTime__c</fullName>
        <inlineHelpText>Time cards which have been marked as &quot;invoiced&quot; (lock) in Harvest.</inlineHelpText>
        <label>Invoiced Time</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_my_Record__c</fullName>
        <formula>ENCODED:OR(
{!ID:$User.Id} = {!ID:Owner},
{!ID:$User.Id} = LEFT({!ID:00N0B000006J0CD}, 15),
{!ID:$User.Id} = LEFT({!ID:00N0B000006J0C8}, 15))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is my Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jan_Bookkeeping_Stages__c</fullName>
        <label>Jan Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_Called_Client_On__c</fullName>
        <inlineHelpText>Please call the client at least once a month and record when you did so here.</inlineHelpText>
        <label>Jan Called Client On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jan_Comments__c</fullName>
        <label>Jan Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jan_Complete__c</fullName>
        <label>Jan Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Days_from_Not_Started_to_Complete__c</fullName>
        <formula>Jan_Complete__c - Jan_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Days from Not Started to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Days_from_Review_to_Send_Financials__c</fullName>
        <formula>Jan_Send_Financials_or_Review_Notes__c -  Jan_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Days from Review to Send Financials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Days_to_1st_Review__c</fullName>
        <formula>Jan_Review__c - Jan_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan Days to 1st Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_Docs_Rcvd_From_Client__c</fullName>
        <label>Jan Docs Rcvd From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Jan Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Due_Date__c</fullName>
        <label>Jan Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Feb 15th</fullName>
                </value>
                <value>
                    <fullName>Feb 25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_Financials_Sent_to_Client_On__c</fullName>
        <label>Jan Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_In_Progress__c</fullName>
        <label>Jan In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Not_Started__c</fullName>
        <label>Jan Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Priority__c</fullName>
        <label>Jan Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jan_Review__c</fullName>
        <label>Jan Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Send_Financials_or_Review_Notes__c</fullName>
        <label>Jan Send Financials or Review Notes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jan_Type_of_Financials_Sent__c</fullName>
        <label>Jan Type of Financials Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Financials_Sent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jr_Bookkeeper_Email__c</fullName>
        <label>Jr. Bookkeeper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Jr_Bookkeeper_Id__c</fullName>
        <label>Jr. Bookkeeper Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jr_Bookkeeper__c</fullName>
        <label>Jr. Bookkeeper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alan Wenger</fullName>
                </value>
                <value>
                    <fullName>Andre Sega</fullName>
                </value>
                <value>
                    <fullName>Cindy Mejorado</fullName>
                </value>
                <value>
                    <fullName>Gina Bionda</fullName>
                </value>
                <value>
                    <fullName>Kiera Dunphy</fullName>
                </value>
                <value>
                    <fullName>Nancy Naraine</fullName>
                </value>
                <value>
                    <fullName>Paolo Velandria</fullName>
                </value>
                <value>
                    <fullName>Renee Fortin</fullName>
                </value>
                <value>
                    <fullName>Ruvimbo Mashingaidze</fullName>
                </value>
                <value>
                    <fullName>Steven Carter</fullName>
                </value>
                <value>
                    <fullName>Tavia Harter</fullName>
                </value>
                <value>
                    <fullName>Cherylin Ocampo</fullName>
                    <isActive>false</isActive>
                    <label>Cherylin Ocampo</label>
                </value>
                <value>
                    <fullName>Dawn Popa</fullName>
                    <isActive>false</isActive>
                    <label>Dawn Popa</label>
                </value>
                <value>
                    <fullName>Jessica Hartstein</fullName>
                    <isActive>false</isActive>
                    <label>Jessica Hartstein</label>
                </value>
                <value>
                    <fullName>Mandrell Hahn</fullName>
                    <isActive>false</isActive>
                    <label>Mandrell Hahn</label>
                </value>
                <value>
                    <fullName>Mike Frandson</fullName>
                    <isActive>false</isActive>
                    <label>Mike Frandson</label>
                </value>
                <value>
                    <fullName>Need List of Names</fullName>
                    <isActive>false</isActive>
                    <label>Need List of Names</label>
                </value>
                <value>
                    <fullName>Noelle Irisoanga</fullName>
                    <isActive>false</isActive>
                    <label>Noelle Irisoanga</label>
                </value>
                <value>
                    <fullName>Tracey Confair</fullName>
                    <isActive>false</isActive>
                    <label>Tracey Confair</label>
                </value>
                <value>
                    <fullName>Troy Howard</fullName>
                    <isActive>false</isActive>
                    <label>Troy Howard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jul_Bookkeeping_Stages__c</fullName>
        <label>Jul Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jul_Called_Client_On__c</fullName>
        <inlineHelpText>Please call the client at least once a month and record when you did so here.</inlineHelpText>
        <label>Jul Called Client On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jul_Comments__c</fullName>
        <label>Jul Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jul_Complete__c</fullName>
        <label>Jul Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Days_From_Review_to_Send_Financials__c</fullName>
        <formula>Jul_Send_Financials_or_Review_Notes__c -  Jul_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul Days From Review to Send Financials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Days_from_Not_Started_to_Complete__c</fullName>
        <formula>Jul_Complete__c -  Jul_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul Days from Not Started to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Days_to_1st_Review__c</fullName>
        <formula>Jul_Review__c -  Jul_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jul Days to 1st Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jul_Docs_Rcvd_From_Client__c</fullName>
        <label>Jul Docs Rcvd From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Jul Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Due_Date__c</fullName>
        <label>Jul Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aug 15th</fullName>
                </value>
                <value>
                    <fullName>Aug 25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jul_Financials_Sent_to_Client_On__c</fullName>
        <label>Jul Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_In_Progress__c</fullName>
        <label>Jul In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Not_Started__c</fullName>
        <label>Jul Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Priority__c</fullName>
        <label>Jul Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jul_Review__c</fullName>
        <label>Jul Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Send_Financials_or_Review_Notes__c</fullName>
        <label>Jul Send Financials or Review Notes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jul_Type_of_Financials_Sent__c</fullName>
        <label>Jul Type of Financials Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Financials_Sent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jun_Bookkeeping_Stages__c</fullName>
        <label>Jun Bookkeeping Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jun_Called_Client_On__c</fullName>
        <inlineHelpText>Please call the client at least once a month and record when you did so here.</inlineHelpText>
        <label>Jun Called Client On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Jun_Comments__c</fullName>
        <label>Jun Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Jun_Complete__c</fullName>
        <label>Jun Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Days_From_Not_Started_to_Complete__c</fullName>
        <formula>Jun_Complete__c - Jun_Not_Started__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun Days From Not Started to Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Days_From_Review_to_Send_Financials__c</fullName>
        <formula>Jun_Send_Financials_or_Review_Notes__c -  Jun_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun Days From Review to Send Financials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Days_to_1st_Review__c</fullName>
        <formula>Jun_Review__c -  Jun_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jun Days to 1st Review</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_Docs_Rcvd_From_Client__c</fullName>
        <label>Jun Docs Rcvd From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Draft_Financial_Sent_to_Client_On__c</fullName>
        <label>Jun Draft Financial Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Due_Date__c</fullName>
        <label>Jun Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jul 15th</fullName>
                </value>
                <value>
                    <fullName>Jul 25th</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jun_Financials_Sent_to_Client_On__c</fullName>
        <label>Jun Financials Sent to Client On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_In_Progress__c</fullName>
        <label>Jun In Progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Not_Started__c</fullName>
        <label>Jun Not Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Priority__c</fullName>
        <label>Jun Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Priority</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jun_Review__c</fullName>
        <label>Jun Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Send_Financials_or_Review_Notes__c</fullName>
        <label>Jun Send Financials or Review Notes</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Jun_Type_of_Financials_Sent__c</fullName>
        <label>Jun Type of Financials Sent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_of_Financials_Sent</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastTimeLogged__c</fullName>
        <inlineHelpText>Most recent date of time cards logged.</inlineHelpText>
        <label>Last Time Logged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_Financials_Sent__c</fullName>
        <formula>IF(NOT(ISBLANK(Dec_Draft_Financial_Sent_to_Client_On__c)), Dec_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Nov_Draft_Financial_Sent_to_Client_On__c)), Nov_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Oct_Draft_Financial_Sent_to_Client_On__c)), Oct_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Sep_Draft_Financial_Sent_to_Client_On__c)), Sep_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Aug_Draft_Financial_Sent_to_Client_On__c)), Aug_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Jul_Draft_Financial_Sent_to_Client_On__c)), Jul_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Jun_Draft_Financial_Sent_to_Client_On__c)), Jun_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(May_Draft_Financial_Sent_to_Client_On__c)), May_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Apr_Draft_Financial_Sent_to_Client_On__c)), Apr_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Mar_Draft_Financial_Sent_to_Client_On__c)), Mar_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Feb_Draft_Financial_Sent_to_Client_On__c)), Feb_Draft_Financial_Sent_to_Client_On__c,
IF(NOT(ISBLANK(Jan_Draft_Financial_Sent_to_Client_On__c)), Jan_Draft_Financial_Sent_to_Client_On__c,
null))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Date Financials Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Draft_Financials_Sent__c</fullName>
        <formula>IF( ISPICKVAL(Dec_Bookkeeping_Stages__c,  &quot;Review&quot; ), Dec_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Nov_Bookkeeping_Stages__c, &quot;Review&quot;), Nov_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Oct_Bookkeeping_Stages__c, &quot;Review&quot;), Oct_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Sep_Bookkeeping_Stages__c, &quot;Review&quot;), Sep_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Aug_Bookkeeping_Stages__c, &quot;Review&quot;), Aug_Draft_Financial_Sent_to_Client_On__c, 
IF( ISPICKVAL(Jul_Bookkeeping_Stages__c, &quot;Review&quot;), Jul_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Jun_Bookkeeping_Stages__c, &quot;Review&quot;), Jun_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(May_Bookkeeping_Stages__c, &quot;Review&quot;), May_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Apr_Bookkeeping_Stages__c, &quot;Review&quot;), Apr_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Mar_Bookkeeping_Stages__c, &quot;Review&quot;), Mar_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Feb_Bookkeeping_Stages__c, &quot;Review&quot;), Feb_Draft_Financial_Sent_to_Client_On__c,
IF( ISPICKVAL(Jan_Bookkeeping_Stages__c, &quot;Review&quot;), Jan_Draft_Financial_Sent_to_Client_On__c, null))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Draft Financials Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Month_Marked_Complete__c</fullName>
        <formula>IF(ISBLANK(Jan_Complete__c) = FALSE , Jan_Complete__c,
IF(ISBLANK(Feb_Complete__c) = FALSE , Feb_Complete__c,
IF(ISBLANK(Mar_Complete__c) = FALSE , Mar_Complete__c,
IF(ISBLANK(Apr_Complete__c) = FALSE , Apr_Complete__c,
IF(ISBLANK(May_Complete__c) = FALSE , May_Complete__c,
IF(ISBLANK(Jun_Complete__c) = FALSE , Jun_Complete__c,
IF(ISBLANK(Jul_Complete__c) = FALSE , Jul_Complete__c,
IF(ISBLANK(Aug_Complete__c) = FALSE , Aug_Complete__c,
IF(ISBLANK(Sep_Complete__c) = FALSE , Sep_Complete__c,
IF(ISBLANK(Oct_Complete__c) = FALSE , Oct_Complete__c,
IF(ISBLANK(Nov_Complete__c) = FALSE , Nov_Complete__c, Dec_Complete__c )))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month Marked Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Month_in_Review__c</fullName>
        <formula>IF( ISPICKVAL(Dec_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;December&quot;,
IF( ISPICKVAL(Nov_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;November&quot;,
IF( ISPICKVAL(Oct_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;October&quot;,
IF( ISPICKVAL(Sep_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;September&quot;,
IF( ISPICKVAL(Aug_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;August&quot;, 
IF( ISPICKVAL(Jul_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;July&quot;,
IF( ISPICKVAL(Jun_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;June&quot;,
IF( ISPICKVAL(May_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;May&quot;,
IF( ISPICKVAL(Apr_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;April&quot;,
IF( ISPICKVAL(Mar_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;March&quot;,
IF( ISPICKVAL(Feb_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;February&quot;,
IF( ISPICKVAL(Jan_Bookkeeping_Stages__c, &quot;Review&quot;), &quot;January&quot;, &quot;None&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Month in Review</label>
        <type>Text</type>
    </fields>
</CustomObject>